# exocortex-untrusted-content

./: .dockerignore  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
examples/: kz-qwenguard.env  openclaw-browser-agent.md  pipeline-request.json
honeypot/: README.md  SKILL.md  config.json  honeypot.sh
sanitizer/: README.md
scanner/: README.md
scripts/: eval_synthetic_injections.py  qwenguard_openai_server.py
src/untrusted_content_tool/: __init__.py  api.py  cli.py  guardrail.py  llm_client.py  models.py  pipeline.py  sanitizer.py  scanner.py  storage.py  utils.py
tests/: test_api.py  test_pipeline.py  test_sanitizer.py  test_windowing.py
tools/tool-untrusted-content/: Dockerfile  README.md  docker-compose.appgarden.yml  docker-compose.yml  kamiwaza.json
